# mpd-notification-daemon

./: Cargo.toml  README.md
src/: main.rs
