[package]
name = "mpd-notification-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4.8.0"
mpd = "0.0.12" #{ git = "https://github.com/kstep/rust-mpd.git" }
dirs = "5.0.1"
time = "*"
confy = "0.5.1"
serde = "1.0.163"