[package]
name = "mpd-notification-daemon"
version = "0.1.0"
edition = "2021"

[features]
albumart = ["use-mpd-git"]
use-mpd-git = ["mpd-git"]

[dependencies]
notify-rust = "4.8.0"
mpd-stable = { package = "mpd", version = "0.0.12"}
mpd-git = { package = "mpd", git = "https://github.com/kstep/rust-mpd.git", optional = true }
dirs = "5.0.1"
time = "*"
confy = "0.5.1"
serde = "1.0.163"